Change Locator to use geometry_msg Point rather than custom class

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 devel/
 logs/
-log/
 build/
 bin/
 lib/
@@ -50,3 +49,7 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# Pycharm files
+.idea/
+4
