--- a/src/Locator/package.xml
+++ b/src/Locator/package.xml
@@ -12,6 +12,7 @@
   <exec_depend>depthai_sdk</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>turtlebot4_interfaces</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
